--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">VelibIsk</string>
+    <string name="rss_source_lenta_name">Lenta.ru</string>
+    <string name="rss_source_gazeta_name">Gazeta.ru</string>
 </resources>
